// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`label simple 1`] = `
Program {
  "children": [
    Label {
      "kind": "label",
      "name": Identifier {
        "kind": "identifier",
        "name": "a",
      },
    },
    Echo {
      "expressions": [
        String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": ""Foo"",
          "unicode": false,
          "value": "Foo",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`label simple 2`] = `
Program {
  "children": [
    Label {
      "kind": "label",
      "name": Identifier {
        "kind": "identifier",
        "name": "longName",
      },
    },
    Echo {
      "expressions": [
        String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": ""Foo"",
          "unicode": false,
          "value": "Foo",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
